--- a/Logistic Regression/Logistic.ipynb
+++ b/Logistic Regression/Logistic.ipynb
@@ -21,7 +21,7 @@
         "id": "k1OrsyikbQK_"
       },
       "source": [
-        "# **Credit Classification**"
+        "# **HR analsis**"
       ]
     },
     {
