--- a/Decision_Tree.ipynb
+++ b/Decision_Tree.ipynb
@@ -31,21 +31,21 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 203
+          "height": 204
         },
         "id": "mzjYdzXfxa8Y",
-        "outputId": "cdfbe4c0-bac0-489f-8b32-07f6307746bb"
+        "outputId": "8fbfd9e4-02d2-4dd7-a324-6fedb246a0dc"
       },
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "#dataset_url = \"https://github.com/sravanirachamalla/MLP2021/blob/main/500_Person_Gender_Height_Weight_Index.csv\"\n",
+        "#dataset_url = \"https://github.com/Balachandar-R/dataset/blob/main/500_Person_Gender_Height_Weight_Index.csv\"\n",
         "\n",
-        "data = pd.read_csv('https://raw.githubusercontent.com/sravanirachamalla/MLP2021/main/500_Person_Gender_Height_Weight_Index.csv')\n",
+        "data = pd.read_csv('/content/sample_data/500_Person_Gender_Height_Weight_Index.csv')\n",
         "data.head()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,7 +125,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 14
         }
       ]
     },
@@ -147,7 +147,7 @@
         "data['obese'] = (data.Index >= 4).astype('int')\n",
         "data.drop('Index', axis = 1, inplace = True)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +211,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ewcW2nlP6zbA",
-        "outputId": "eec03921-b3d6-44b9-b9b4-2564b768c403"
+        "outputId": "87201ba6-d3a0-4252-a7f9-f05fd702dc4f"
       },
       "source": [
         "print(\n",
@@ -221,7 +221,7 @@
         "  data.loc[(data['Weight']>=80) & (data['obese']==0),:].shape[0]\n",
         ")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,7 +268,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9D5taSnE7twJ",
-        "outputId": "fe520ea7-1198-479f-b46b-3417ad5bb03c"
+        "outputId": "12bee5c9-4301-4725-9202-a06177aa9005"
       },
       "source": [
         "def gini_impurity(y):\n",
@@ -286,7 +286,7 @@
         "\n",
         "gini_impurity(data.Gender) "
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +296,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 17
         }
       ]
     },
@@ -335,7 +335,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Abj82iKq8vFe",
-        "outputId": "11316775-a9bf-4fd9-ef20-480fd8291a30"
+        "outputId": "7de0d0e7-8f6d-491f-9b1a-03b82fd48208"
       },
       "source": [
         "def entropy(y):\n",
@@ -353,7 +353,7 @@
         "\n",
         "entropy(data.Gender) "
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -363,7 +363,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 18
         }
       ]
     },
@@ -430,9 +430,10 @@
         "      ig = variance(y) - (a/(a+b)* variance(y[mask])) - (b/(a+b)*variance(y[-mask]))\n",
         "    else:\n",
         "      ig = func(y)-a/(a+b)*func(y[mask])-b/(a+b)*func(y[-mask])\n",
+        "  \n",
         "  return ig"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -442,13 +443,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e4m9flOD_Ir5",
-        "outputId": "f5c75759-ef14-4862-ef0f-16159a9e722b"
+        "outputId": "916143f9-1b67-4709-8950-0c2efed7c3b0"
       },
       "source": [
         "##Now, we can calculate the information gain of a specific cut:\n",
         "information_gain(data['obese'], data['Gender'] == 'Male')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -458,7 +459,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 20
         }
       ]
     },
@@ -500,7 +501,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EGLHyHCTAgpp",
-        "outputId": "bf2d0f89-6cb5-41a8-9c87-45f991748c69"
+        "outputId": "59a8f2ca-2837-4c36-d261-40a64101f62c"
       },
       "source": [
         "import itertools\n",
@@ -567,7 +568,7 @@
         "  weight_slpit,\"\\nInformation Gain for that split is:\", weight_ig\n",
         ")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,15 +597,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 172
+          "height": 173
         },
         "id": "33pcd5laArIp",
-        "outputId": "b5835bc7-8090-433f-c3f7-b18f4b1ebdb2"
+        "outputId": "5925d65c-eea7-437c-a684-1a49c8b19ebb"
       },
       "source": [
         "data.drop('obese', axis= 1).apply(max_information_gain_split, y = data['obese'])\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -671,7 +672,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 22
         }
       ]
     },
@@ -782,7 +783,7 @@
         "\n",
         "  return pred"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -812,7 +813,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nZHWjGP9CN6i",
-        "outputId": "1753de0e-e390-4f89-db40-5156afcdc8ed"
+        "outputId": "d17460ba-1e1d-4b25-e7fd-24ab46f84457"
       },
       "source": [
         "def train_tree(data,y, target_factor, max_depth = None,min_samples_split = None, min_information_gain = 1e-20, counter=0, max_categories = 20):\n",
@@ -839,6 +840,7 @@
         "  # Check for depth conditions\n",
         "  if max_depth == None:\n",
         "    depth_cond = True\n",
+        "\n",
         "  else:\n",
         "    if counter < max_depth:\n",
         "      depth_cond = True\n",
@@ -911,7 +913,7 @@
         "\n",
         "decisiones"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -924,7 +926,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 24
         }
       ]
     },
@@ -987,7 +989,7 @@
         "    residual_tree = answer\n",
         "    return clasificar_datos(observacion, answer)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
